--- a/neighbour/templates/navbar.html
+++ b/neighbour/templates/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
-<nav style="background-color:#55BCC9;">
+<nav style="background-color:#c0258c;">
   <div class="nav-wrapper">
-    <a href="/" class="brand-logo center">Fits Watch</a>
+    <a href="/" class="brand-logo center">Neighbourhood</a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="left hide-on-med-and-down">
         <li><a href="{% url 'businesses' %}">Businesses</a></li>
@@ -32,10 +32,8 @@
  <!-- Modal Structure -->
    <div id="contactsmodal" class="modal">
      <div class="modal-content">
-       <h6 style="color:blue">Emergeny Contacts</h6>
-       <p>Police: 999 <br>Ambulance: 5674 <br>Fire Brigade: 7899</p>
+       <h6 style="color:rgb(57, 145, 123)">Emergeny Contacts</h6>
+       <p>Fire Brigade: 7899 <br>Ambulance: 5674 <br>Police: 999</p>
      </div>
-     <div class="modal-footer">
-       <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
-     </div>
+     
    </div>
