create app structure

--- a/neighbour/templates/index.html
+++ b/neighbour/templates/index.html
@@ -1,4 +1,4 @@
-{% include 'base.html' %}
+<!-- {% include 'base.html' %}
 {% load bootstrap4%}
 {%block content%}
     <div class="container" style="background-color:#e3f2fd;; color:rgb(26, 97, 49);">
@@ -46,4 +46,4 @@
           </script>
           {% endblock %}
     </div>
-{% endblock %}
+{% endblock %} -->
