--- a/neighbour/templates/base.html
+++ b/neighbour/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+<!-- {% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
@@ -45,4 +45,4 @@
             </script>
         {% endblock %}
     </body>
-</html>
+</html> -->
