--- a/neighbour/templates/navbar.html
+++ b/neighbour/templates/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav style="background-color:#c0258c;">
+<nav style="background-image: url(https://images.unsplash.com/photo-1571055107559-3e67626fa8be?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=889&q=80);" >
   <div class="nav-wrapper">
     <a href="/" class="brand-logo center">Neighbourhood</a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
