--- a/neighbour/templates/post.html
+++ b/neighbour/templates/post.html
@@ -1,4 +1,4 @@
-{% include 'base.html' %}
+<!-- {% include 'base.html' %}
 {% load bootstrap4 %}
 {% block content %}
     <div class="container">
@@ -25,4 +25,4 @@
             </div>
         </div>
     </div>
-{% endblock %}
+{% endblock %} -->
