--- a/neighbour/templates/index.html
+++ b/neighbour/templates/index.html
@@ -1,7 +1,7 @@
 {% include 'base.html' %}
 {% load bootstrap4%}
 {%block content%}
-    <div class="container" style="background-color:#e3f2fd;; color:rgb(26, 97, 49);">
+    <div class="container" style=" color:rgb(16, 26, 119);">
         <div class="row">
             <div class="col m6">
                 <h3 class="center-align">Neighborhood {{profile.neighborhood}}</h3>
@@ -12,19 +12,19 @@
              <div class="card-panel">
                <h5>{{post.title}}</h5>
                <p>{{post.content|truncatechars:200}}</p>
-               <a class="waves-effect waves-light btn" href="{% url 'post' post.id %}">Read</a>
+               <a class="waves-effect waves-dark btn" href="{% url 'post' post.id %}">Read</a>
              </div>
             </div>
             {% endfor %}
             <div class="fixed-action-btn">
-                <a class="btn-floating btn-large blue modal-trigger" href="#modal1"><i class="large material-icons">add</i></a>
+                <a class="btn-floating btn-large blue modal-trigger" href="#modal1"><i class="large material-icons">Add</i></a>
             </div>
         </div>
         <!-- Modal Structure -->
         <div id="modal1" class="modal" style="max-height: 800px !important;">
           <form action="{%url 'index' %}" method='post' enctype="multipart/form-data">
           <div class="modal-content">
-            <h4>Add a Post</h4>
+            <h4>Post here</h4>
 
                 {% csrf_token %}
                 {{ form }}
