--- a/neighbour/templates/index.html
+++ b/neighbour/templates/index.html
@@ -1,7 +1,7 @@
 {% include 'base.html' %}
 {% load bootstrap4%}
 {%block content%}
-    <div class="container" style=" color:rgb(16, 26, 119);">
+    <div class="container" style=" color:rgb(16, 26, 119);background-color: aqua;">
         <div class="row">
             <div class="col m6">
                 <h3 class="center-align">Neighborhood {{profile.neighborhood}}</h3>
