--- a/neighbour/templates/registration/login.html
+++ b/neighbour/templates/registration/login.html
@@ -1,7 +1,7 @@
 {%extends "django_registration/base.html"%}
 {% load bootstrap4 %}
 {% block content %}
-<div class="container" style="background-color:#e3f2fd;; color:blue;">
+<div class="container" style="background-color:burlywood;; color:maroon;">
   <div class="row">
     <!-- Empty div -->
     <div class="col s4"></div>
@@ -12,7 +12,7 @@
       <div class="panel panel-default">
 
         <div class="panel-heading">
-          <h3 class="text-center">Sign In</h3>
+          <h3 class="text-center">sign in</h3>
         </div>
         <div class="panel-body">
 
@@ -21,7 +21,7 @@
             {{form}}
 
             <div class="form-group">
-              <input type="submit" class="btn btn-primary btn-sm" value="Login">
+              <input style="background-color: burlywood;" type="submit" class="btn btn-info btn-sm" value="Login">
               <p>Register <a href="/accounts/register">here</a></p>
             </div>
 
